--- a/museum/css/style.scss
+++ b/museum/css/style.scss
@@ -36,6 +36,8 @@ header {
     color: white;
     margin-left: 20px;
     letter-spacing: 5px;
+    font-size: 28px;
+    line-height: 50px;
   }
 }
 .menu{
