--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -426,6 +426,16 @@ a {
   text-decoration: none;
 }
 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .welocome {
   padding-top: 115px;
   background-color: #030303;
@@ -591,7 +601,7 @@ hr {
 }
 
 .item-address a,
-.item-address label {
+.item-address span {
   color: #030303;
   font-weight: 300;
   font-size: 22px;
@@ -740,9 +750,10 @@ button {
 }
 
 .tickets .counter-wrap .value-counter {
-  width: 12px;
+  width: 17px;
   background-color: transparent;
   border: none;
+  color: #ffffff;
 }
 
 .tickets .ticket-amount label {
@@ -786,9 +797,9 @@ button {
 }
 
 .footer .menu {
+  column-count: 2;
+  display: block;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
 
 .footer .social-links {
