--- a/museum/css/style.scss
+++ b/museum/css/style.scss
@@ -171,7 +171,7 @@ hr{
         font-weight: 200;
         font-size: 22px;
         line-height: 26px;
-        color: $black;
+        color: $full-black;
         margin-bottom: 10px;
       }
     }
